--- a/fat_shell.1
+++ b/fat_shell.1
@@ -12,7 +12,7 @@ O executavel não leva nenhum argumento, todos os comandos são feitos dentro do
 .SH SHELL OPTIONS
 init					inicializa o sistema de arquivos em branco.  
 
-load					carregga um sistema de arquivos do disco.  
+load					carrega um sistema de arquivos do disco.  
 
 mkdir  [path]			lista diretório.  
 
@@ -28,12 +28,14 @@ read   [path]			le conteúdo de um arquivo.
 
 cd     [path]			vai ao diretório especificado.  
 
+help					vai ao diretório especificado.  
+
 quit					sai do programa.  
 .SH BUGS
-No known bugs.
+Nenhum bug conhecido.
 .SH AUTHOR
 Gabriel Carneiro (gabriel.chaves.carneiro@gmail.com)
 
-André Luis (dedasgdias@gmail.com)
+André Luiz (dedasgdias@gmail.com)
 
-Filipe Samuel
+Felipe Samuel (felipesamuel844@gmail.com)
